# eudaimonia

./: CMakeLists.txt  README.md  resources.qrc
app/: CMakeLists.txt  PlainTextEdit.cpp  PlainTextEdit.h  main.cpp  mainwindow.cpp  mainwindow.h
docs/: build.md  similar.md
